--- a/docker-images/docker-compose.yml
+++ b/docker-images/docker-compose.yml
@@ -1,12 +1,33 @@
 version: "3.9"
 services:
-  web-static:
-    build: appach-php-image/.
+  reverse-proxy:
+    # The official v2 Traefik docker image
+    image: traefik:v2.9
+    # Enables the web UI and tells Traefik to listen to docker
+    command: --api.insecure=true --providers.docker
     ports:
-      - "9090:80"
+      # The HTTP port
+      - "80:80"
+      # The Web UI (enabled by --api.insecure=true)
+      - "8080:8080"
+    volumes:
+      # So that Traefik can listen to the Docker events
+      - /var/run/docker.sock:/var/run/docker.sock
+  whoami:
+    # A container that exposes an API to show its IP address
+    image: traefik/whoami
+    scale: 3  
+    labels:
+      - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
   redis:
     image: "redis:alpine"
   test-app:
     build: ../composetest/.
-    ports:
-      - "9091:5000"
+    labels:
+      - "traefik.http.routers.test-app.rule=Host(`tests-pages.docker.localhost`)"
+  web-static:
+    build: appach-php-image/.
+    scale: 3
+    labels:
+      - "traefik.http.routers.web-static.rule=PathPrefix(`/`)"
+      
