--- a/docker-images/express-image/Dockerfile
+++ b/docker-images/express-image/Dockerfile
@@ -1,4 +1,10 @@
 FROM node:18.12
-COPY src /opt/app
+
+WORKDIR ../
+COPY ./src /opt/app
+
 EXPOSE 3000
+
+WORKDIR /opt/app
+RUN npm install
 CMD ["node", "/opt/app/index.js"]
