--- a/docker-images/express-image/Dockerfile
+++ b/docker-images/express-image/Dockerfile
@@ -7,4 +7,6 @@ EXPOSE 3000
 
 WORKDIR /opt/app
 RUN npm install
+RUN apt-get update && \
+  apt-get install -y vim
 CMD ["node", "/opt/app/index.js"]
