--- a/docker-images/docker-compose.yml
+++ b/docker-images/docker-compose.yml
@@ -13,12 +13,19 @@ services:
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
-  whoami:
+  whoami-robin:
     # A container that exposes an API to show its IP address
     image: traefik/whoami
     scale: 3  
     labels:
-      - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
+      - "traefik.http.routers.whoami-robin.rule=Host(`whoami-robin.docker.localhost`)"
+  whoami-sticky:
+    # A container that exposes an API to show its IP address
+    image: traefik/whoami
+    scale: 3
+    labels:
+      - "traefik.http.services.whoami-sticky.loadbalancer.sticky.cookie={}"
+      - "traefik.http.routers.whoami-sticky.rule=Host(`whoami-sticky.docker.localhost`)"
   redis:
     image: "redis:alpine"
   test-app:
@@ -37,6 +44,5 @@ services:
       - "traefik.http.routers.web-dynamic.rule=PathPrefix(`/api`)"
       - "traefik.http.middlewares.middle-dyn.stripprefix.prefixes=/api"
       - "traefik.http.routers.web-dynamic.middlewares=middle-dyn"
-
       - "traefik.http.services.web-dynamic.loadbalancer.server.port=3000"
       
