--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,4 +51,14 @@ services:
       - "traefik.http.middlewares.middle-dyn.stripprefix.prefixes=/api"
       - "traefik.http.routers.web-dynamic.middlewares=middle-dyn"
       - "traefik.http.services.web-dynamic.loadbalancer.server.port=3000"
+  portainer:
+    image: portainer/portainer-ce:latest
+    ports:
+      - 9443:9443
+    volumes:
+        - data:/data
+        - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+volumes:
+  data:
       
